--- a/ToDH_Texture_Pack/assets/minecraft/lang/zh_tw.json
+++ b/ToDH_Texture_Pack/assets/minecraft/lang/zh_tw.json
@@ -1,8 +1,22 @@
 {
     "ToDH.message,next_page":"\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n",
-    "ToDH.dragon_pavilion":" 龍 虛 閣 ",
-    "ToDH.dragon_pavilion.upgrade":"<<靈魂昇華>>",
-    "ToDH.dragon_pavilion.upgrade.short_description":"點此進入靈魂昇華頁面。",
+    "ToDH.dragon_pavilion":" 臨時庇護所 ",
+    "ToDH.dragon_pavilion.soul_upgrade":"<<靈魂昇華>>",
+    "ToDH.dragon_pavilion.soul_upgrade.description":"可在此花費龍魂提升部分屬性。",
+    "ToDH.dragon_pavilion.soul_upgrade.short_description":"點此進入靈魂昇華頁面。",
+    "ToDH.dragon_pavilion.soul_upgrade.empowered":"[強化靈魂]",
+    "ToDH.dragon_pavilion.soul_upgrade.empowered.short_description":"點此花費龍魂強化靈魂。",
+    "ToDH.dragon_pavilion.soul_upgrade.empowered_success":"強化成功",
+    "ToDH.dragon_pavilion.soul_upgrade.dragon_soul_not_enough":"龍魂不足",
+    "ToDH.dragon_pavilion.soul_upgrade.max_health":"血量上限",
+    "ToDH.dragon_pavilion.soul_upgrade.attack_damage":"攻擊傷害",
+    "ToDH.dragon_pavilion.soul_upgrade.mana_max":"魔力上限",
+    "ToDH.dragon_pavilion.soul_upgrade.spell_cost":"施法消耗",
+    "ToDH.dragon_pavilion.soul_upgrade.mana_strength":"魔力強度",
+    "ToDH.dragon_pavilion.soul_upgrade.mana_regen":"魔能回復",
+    "ToDH.dragon_pavilion.soul_upgrade.stiff_bodylimit":"僵直上限",
+    "ToDH.dragon_pavilion.soul_upgrade.stiff_apply":"僵直賦予",
+    "ToDH.dragon_pavilion.soul_upgrade.stiff_resilience":"僵直彈性",
     "ToDH.dragon_pavilion.soul_mark":"<<靈魂烙印>>",
     "ToDH.dragon_pavilion.soul_mark.short_description":"點此進入靈魂烙印頁面。",
     "ToDH.dragon_pavilion.soul_mark.description":"可在此花費龍魂將物品欄烙上靈魂印記，具有靈魂印記的物品欄將不會在死亡時丟失物品。",
@@ -23,7 +37,127 @@
     "ToDH.dragon_pavilion.back_main_page.short_description":"點此返回龍虛閣。",
     "ToDH.dragon_pavilion.leave":"[離開龍虛閣]",
     "ToDH.dragon_pavilion.leave.short_description":"點此離開龍虛閣。",
+    "ToDH.plot.choice":"選項",
+    "ToDH.plot.mission":"任務",
+    "ToDH.plot.quest":"選擇",
+
+    "ToDH.plot.tutor.name":"圖特．雷亞",
+    "ToDH.plot.tutor.1":"給我下來，你個廢物！拿著帝國賞金可不是讓你打混的！還不到廣場去！",
+    "ToDH.plot.tutor.1.mission":"前往兵營廣場。",
+    "ToDH.plot.tutor.2":"廢物們！聽著，接下來會給你們做出最基礎的訓練，然後你們就會被送進那座高塔。",
+    "ToDH.plot.tutor.3":"既然來到了就把你們那些貪生怕死的想法收著點，你們只有兩個選擇，進塔帶回情報後享盡榮華富貴，或死在塔里。",
+    "ToDH.plot.tutor.4":"你們只有一天的時間，選好你的武器，然後找到你的教官進行訓練。",
+    "ToDH.plot.tutor.4.mission":"前往兵器部選擇武器，並完成訓練。",
+
+    "ToDH.plot.opera.name":"歐比拉．伏希特斯",
+    "ToDH.plot.opera.1":"新兵？又來啦？選好拿走就好，別煩我。",
+    "ToDH.plot.opera.1.quest":"選擇你的武器。",
+    "ToDH.plot.opera.1.1":"長劍",
+    "ToDH.plot.opera.1.2":"弓箭",
+    "ToDH.plot.opera.1.3":"法杖",
+    "ToDH.plot.opera.10":"選長劍好了。",
+    "ToDH.plot.opera.11":"選弓箭好了。",
+    "ToDH.plot.opera.12":"選法杖好了。",
+
+    "ToDH.plot.spacy.0":"\u00A7l輕型魔造人偶\u00A7r，\u00A7l重型魔造人偶\u00A7r",
+    "ToDH.plot.spacy.name":"斯派希．雷亞",
+    "ToDH.plot.spacy.1":"用劍最重要的是距離與時機的把控，拿好他，打壞那幾個木樁讓我看看你的基礎。",
+    "ToDH.plot.spacy.1.mission":"破壞\u00A7l訓練木樁。",
+    "ToDH.plot.spacy.2":"看來你基礎不錯，我生成幾個\u00A7l輕型魔造人偶\u00A7r試著擊敗他們看看。",
+    "ToDH.plot.spacy.2.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.spacy.3":"幾個\u00A7l輕型魔造人偶\u00A7r也難不倒你啊，你實力不錯呢。若不是在這裡遇上你，我真想讓你加入我的部隊，可惜了...。",
+    "ToDH.plot.spacy.4":"\u00A7l\u00A7r罷了，說正事吧，雖然現在有點實力了，但若是遇上能夠打出\u00A7l強攻擊\u00A7r的敵人，還是十分凶險。",
+    "ToDH.plot.spacy.5":"他們沉重的攻擊會使人陷入\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上就趕緊跑吧。",
+    "ToDH.plot.spacy.6":"請讓我挑戰看看。",
+    "ToDH.plot.spacy.7":"不錯，有血性。那我召喚一些\u00A7l輕型魔造人偶\u00A7r和\u00A7l重型魔造人偶\u00A7r讓你訓練吧。",
+    "ToDH.plot.spacy.7.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+
+    "ToDH.plot.tokesor.name":"托科索．瓦伏",
+    "ToDH.plot.tokesor.0":"\u00A7l輕型魔造人偶\u00A7r",
+    "ToDH.plot.tokesor.1":"弓箭？貧民可拉不開......。",
+    "ToDH.plot.tokesor.2":"喔，居然那麼有力氣，看來你有點故事，怎麼會選擇來到這裡呢？",
+    "ToDH.plot.tokesor.3":"算了，去破壞那幾個木樁吧，光開的了弓可不能證明什麼。",
+    "ToDH.plot.tokesor.3.mission":"破壞\u00A7l訓練木樁。\u00A7r",
+    "ToDH.plot.tokesor.4":"不錯的箭法，看來你有點基礎。你這樣的人怎麼會淪落至此呢，真是好奇啊。",
+    "ToDH.plot.tokesor.5":"罷了，先進行下一個訓練吧，我生成幾個\u00A7l輕型魔造人偶\u00A7r試著擊敗他們看看，這次可不是固定靶了。",
+    "ToDH.plot.tokesor.5.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.tokesor.6":"精彩，沒想到你弓術如此精湛，嘖嘖，一開始真是看走眼了。",
+    "ToDH.plot.tokesor.7":"別急著高興，你現在雖然能夠應對\u00A7l輕型魔造人偶\u00A7r但若是碰上能夠打出\u00A7l強攻擊\u00A7r的敵人恐怕還是凶多吉少。",
+    "ToDH.plot.tokesor.8":"他們沉重的攻擊會使人陷入\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上就趕緊跑吧。",
+    "ToDH.plot.tokesor.9":"請讓我挑戰看看。",
+    "ToDH.plot.tokesor.10":"那我召喚一些\u00A7l輕型魔造人偶\u00A7r和\u00A7l重型魔造人偶\u00A7r讓你訓練吧。",
+    "ToDH.plot.tokesor.10.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+
+    "ToDH.plot.madeya.name":"馬迪亞．傑羅斯",
+    "ToDH.plot.madeya.1":"離遠點，貧民！又來個自以為擁有魔力才能的傻子，高貴的魔法可不是你們能夠接觸的。",
+    "ToDH.plot.madeya.2":"真不知道父親怎麼想的怎麼會讓我來到這種地方，不就犯了點錯嗎，可惡！.......。",
+    "ToDH.plot.madeya.3":"那個......。",
+    "ToDH.plot.madeya.4":"吵死了！選擇魔杖是吧？這本書拿去看，然後用魔法同時打碎那些木樁再來找我，反正你也不可能看懂，趕緊換別的武器去。",
+    "ToDH.plot.madeya.4.mission":"破壞\u00A7l訓練木樁。\u00A7r",
+    "ToDH.plot.madeya.5":"什麼！你竟然......！這不可能啊，賤民怎麼可能理解這深奧的法術？我光是入門就花了整整十天，這不可能啊。莫非他不是貧民？不會吧......？",
+    "ToDH.plot.madeya.6":"那個......。",
+    "ToDH.plot.madeya.7":"別......。你到底是不是貧民啊？",
+    "ToDH.plot.madeya.7.quest":"回應\u00A7l馬迪亞．傑羅斯\u00A7r的疑問。",
+    "ToDH.plot.madeya.7.1":"是。",
+    "ToDH.plot.madeya.7.2":"不是。",
+    "ToDH.plot.madeya.8":"不可能！貧民怎麼可能學會法術！我知道了！你一定也是被家主處罰來到這的，對吧。既然已經能夠基本施法了，那就試著擊敗\u00A7l輕型魔造\u00A7r \u00A7l人偶\u00A7r吧。",
+    "ToDH.plot.madeya.8.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.madeya.9":"我就知道！貧民怎麼可能學會法術呢！你一定也是被家主處罰來到這的對吧。既然已經能夠基本施法了，那就試著擊敗\u00A7l輕型魔造人偶\u00A7r吧。",
+    "ToDH.plot.madeya.9.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.madeya.10":"是。",
+    "ToDH.plot.madeya.11":"不是。",
+    "ToDH.plot.madeya.12":"呃，打的挺快的嘛，也就差了我一點點，哈...哈哈。",
+    "ToDH.plot.madeya.13":"別以為這樣你就可以沾沾自喜了，只有像我一樣可以打敗能夠打出\u00A7l強攻擊\u00A7r的敵人才算是頂尖的法師。",
+    "ToDH.plot.madeya.14":"他們沉重的攻擊會使人陷入\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上你就趕緊跑吧。",
+    "ToDH.plot.madeya.15":"請讓我挑戰看看。",
+    "ToDH.plot.madeya.16":"啊？真是自不量力，那我召喚一些\u00A7l輕型魔造人偶\u00A7r和\u00A7l重型\u00A7r \u00A7l魔造人偶\u00A7r吧，不過你是不可能超越我這個天才的。",
+    "ToDH.plot.madeya.16.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+
+    "ToDH.bossbar.remain_mob_amount":"剩餘怪物",
+
+    "ToDH.mob.anger_dark_skeleton":"忿惡冥骨",
+    "ToDH.mob.anger_eerie_skeleton":"忿惡詭骨",
+    "ToDH.mob.grudgeful_blood_zombie":"遺恨血屍",
+    "ToDH.mob.grudgeful_evil_skeleton":"纏怨邪骨",
+    "ToDH.item.battle.description.divider":"==================",
+    "ToDH.item.battle.description.suit_effect":"套裝效果：",
+    "ToDH.item.battle.description.suit_effect.none":"無",
     "ToDH.item.dragon_soul":"龍魂",
-    "ToDH.item.dragon_soul.description":"龍的殘魂，蘊含強大的靈魂之力。"
+    "ToDH.item.dragon_soul.description":"龍的殘魂，蘊含強大的靈魂之力。",
+    "ToDH.item.battle.empire_standard_armor.helmet":"帝軍戰盔",
+    "ToDH.item.battle.empire_standard_armor.helmet.description.1":"帝國頒布帝軍統一戰盔。",
+    "ToDH.item.battle.empire_standard_armor.helmet.description.2":"",
+    "ToDH.item.battle.empire_standard_armor.chestplate":"帝軍戰甲",
+    "ToDH.item.battle.empire_standard_armor.chestplate.description.1":"帝國頒布帝軍統一裝甲。",
+    "ToDH.item.battle.empire_standard_armor.chestplate.description.2":"",
+    "ToDH.item.battle.empire_standard_armor.leggings":"帝軍護腿",
+    "ToDH.item.battle.empire_standard_armor.leggings.description.1":"帝國頒布帝軍統一護腿。",
+    "ToDH.item.battle.empire_standard_armor.leggings.description.2":"",
+    "ToDH.item.battle.empire_standard_armor.boots":"帝軍長靴",
+    "ToDH.item.battle.empire_standard_armor.boots.description.1":"帝國頒布帝軍統一長靴。",
+    "ToDH.item.battle.empire_standard_armor.boots.description.2":"",
+    "ToDH.item.battle.empire_standard_armor.sword":"帝軍大劍",
+    "ToDH.item.battle.empire_standard_armor.sword.description.1":"帝國頒布帝軍統一大劍",
+    "ToDH.item.battle.empire_standard_armor.sword.description.2":"",
+    "ToDH.item.battle.broken_helmet_with_candle":"殘破的頭盔",
+    "ToDH.item.battle.broken_helmet_with_candle.description.1":"材質差勁的破舊頭盔，雖然已經破爛不堪了，",
+    "ToDH.item.battle.broken_helmet_with_candle.description.2":"但隱約能看見內部刻著帝國歷4022年生產。",
+    "ToDH.item.battle.bloody_shirt":"染血襯衫",
+    "ToDH.item.battle.bloody_shirt.description.1":"沾滿了污血的的襯衫。",
+    "ToDH.item.battle.bloody_shirt.description.2":"",
+    "ToDH.item.battle.bloody_pants":"染血麻褲",
+    "ToDH.item.battle.bloody_pants.description.1":"沾滿了污血的的麻褲。",
+    "ToDH.item.battle.bloody_pants.description.2":"",
+    "ToDH.item.battle.broken_shoes":"破爛的麻布鞋",
+    "ToDH.item.battle.broken_shoes.description.1":"常見的手做麻布鞋，縫紉粗糙但牢固，",
+    "ToDH.item.battle.broken_shoes.description.2":"哪怕已經飽受侵蝕仍能發揮它該有的功能。",
+    "ToDH.item.battle.grudgeful_bloody_pickaxe":"血恨十字鎬",
+    "ToDH.item.battle.dagger_of_abhorrence":"憎惡匕首",
+    "ToDH.item.battle.tainted_blood_shovel":"濁血鐵鍬",
+    "ToDH.item.battle.foul_axe":"汙穢鐵斧",
+    "ToDH.item.battle.corrupted_shortbow":"腐敗短弓",
+    "ToDH.item.battle.abhorrence_shortbow":"憎惡短弓"
+
+    
     
 }
