--- a/ToDH_Texture_Pack/assets/minecraft/lang/zh_tw.json
+++ b/ToDH_Texture_Pack/assets/minecraft/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
     "ToDH.message,next_page":"\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n",
-    "ToDH.dragon_pavilion":" 臨時庇護所 ",
+    "ToDH.dragon_pavilion":" 庇 護 所 ",
     "ToDH.dragon_pavilion.soul_upgrade":"<<靈魂昇華>>",
     "ToDH.dragon_pavilion.soul_upgrade.description":"可在此花費龍魂提升部分屬性。",
     "ToDH.dragon_pavilion.soul_upgrade.short_description":"點此進入靈魂昇華頁面。",
@@ -33,10 +33,12 @@
     "ToDH.dragon_pavilion.soul_mark.hotbar":"快捷欄",
     "ToDH.dragon_pavilion.soul_mark.talisman":"護符欄",
     "ToDH.dragon_pavilion.dragon_soul_icon":" \uEff1 * ",
-    "ToDH.dragon_pavilion.back_main_page":"[返回龍虛閣]",
-    "ToDH.dragon_pavilion.back_main_page.short_description":"點此返回龍虛閣。",
-    "ToDH.dragon_pavilion.leave":"[離開龍虛閣]",
-    "ToDH.dragon_pavilion.leave.short_description":"點此離開龍虛閣。",
+    "ToDH.dragon_pavilion.back_main_page":"[返回庇護所]",
+    "ToDH.dragon_pavilion.back_main_page.short_description":"點此返回庇護所。",
+    "ToDH.dragon_pavilion.leave":"[離開庇護所]",
+    "ToDH.dragon_pavilion.leave.short_description":"點此離開庇護所。",
+    "ToDH.dragon_pavilion.view.leave":"[繼續劇情]",
+    "ToDH.dragon_pavilion.view.leave.short_description":"點此繼續撥放劇情。",
     "ToDH.plot.choice":"選項",
     "ToDH.plot.mission":"任務",
     "ToDH.plot.quest":"選擇",
@@ -48,10 +50,15 @@
     "ToDH.plot.tutor.3":"既然來到了就把你們那些貪生怕死的想法收著點，你們只有兩個選擇，進塔帶回情報後享盡榮華富貴，或死在塔里。",
     "ToDH.plot.tutor.4":"你們只有一天的時間，選好你的武器，然後找到你的教官進行訓練。",
     "ToDH.plot.tutor.4.mission":"前往兵器部選擇武器，並完成訓練。",
+    "ToDH.plot.tutor.5":"看來你做好準備了，事不宜遲你就趕緊出發吧。",
+    "ToDH.plot.tutor.6":"你的目標就是前方那做顯眼的高塔，進去調查並把資訊帶回兵營就算完成。",
+    "ToDH.plot.tutor.7":"可別想著逃跑，你知道背叛帝國是什麼下場。",
+    "ToDH.plot.tutor.8":"那麼，出發吧，新兵。為了帝國！帝國萬歲。",
+    "ToDH.plot.tutor.8.mission":"進入龍心之塔。",
 
     "ToDH.plot.opera.name":"歐比拉．伏希特斯",
     "ToDH.plot.opera.1":"新兵？又來啦？選好拿走就好，別煩我。",
-    "ToDH.plot.opera.1.quest":"選擇你的武器。",
+    "ToDH.plot.opera.1.quest":"選擇你的武器。(與歐比拉對話可重複選擇武器，建議將所有武器都體驗一遍。)",
     "ToDH.plot.opera.1.1":"長劍",
     "ToDH.plot.opera.1.2":"弓箭",
     "ToDH.plot.opera.1.3":"法杖",
@@ -59,71 +66,214 @@
     "ToDH.plot.opera.11":"選弓箭好了。",
     "ToDH.plot.opera.12":"選法杖好了。",
 
-    "ToDH.plot.spacy.0":"\u00A7l輕型魔造人偶\u00A7r，\u00A7l重型魔造人偶\u00A7r",
     "ToDH.plot.spacy.name":"斯派希．雷亞",
     "ToDH.plot.spacy.1":"用劍最重要的是距離與時機的把控，拿好他，打壞那幾個木樁讓我看看你的基礎。",
-    "ToDH.plot.spacy.1.mission":"破壞\u00A7l訓練木樁。",
-    "ToDH.plot.spacy.2":"看來你基礎不錯，我生成幾個\u00A7l輕型魔造人偶\u00A7r試著擊敗他們看看。",
-    "ToDH.plot.spacy.2.mission":"破壞\u00A7l魔造人偶。\u00A7r",
-    "ToDH.plot.spacy.3":"幾個\u00A7l輕型魔造人偶\u00A7r也難不倒你啊，你實力不錯呢。若不是在這裡遇上你，我真想讓你加入我的部隊，可惜了...。",
-    "ToDH.plot.spacy.4":"\u00A7l\u00A7r罷了，說正事吧，雖然現在有點實力了，但若是遇上能夠打出\u00A7l強攻擊\u00A7r的敵人，還是十分凶險。",
-    "ToDH.plot.spacy.5":"他們沉重的攻擊會使人陷入\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上就趕緊跑吧。",
+    "ToDH.plot.spacy.1.mission":"破壞\u00A7b\u00A7l訓練木樁。",
+    "ToDH.plot.spacy.2":"看來你基礎不錯，我生成幾個\u00A7b\u00A7l輕型魔造人偶\u00A7r試著擊敗他們看看。",
+    "ToDH.plot.spacy.2.mission":"破壞\u00A7b\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.spacy.3":"幾個\u00A7b\u00A7l輕型魔造人偶\u00A7r也難不倒你啊，你實力不錯呢。若不是在這裡遇上你，我真想讓你加入我的部隊，可惜了...。",
+    "ToDH.plot.spacy.4":"\u00A7l\u00A7r罷了，說正事吧，雖然現在有點實力了，但若是遇上能夠打 出\u00A7c\u00A7l強攻擊\u00A7r的敵人，還是十分凶險。",
+    "ToDH.plot.spacy.5":"他們沉重的攻擊會使人陷入\u00A7c\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上就趕緊跑吧。",
     "ToDH.plot.spacy.6":"請讓我挑戰看看。",
-    "ToDH.plot.spacy.7":"不錯，有血性。那我召喚一些\u00A7l輕型魔造人偶\u00A7r和\u00A7l重型魔造人偶\u00A7r讓你訓練吧。",
-    "ToDH.plot.spacy.7.mission":"破壞\u00A7l魔造人偶。\u00A7r",
-
+    "ToDH.plot.spacy.7":"不錯，有血性。那我召喚一些\u00A7b\u00A7l輕型魔造人偶\u00A7r和\u00A7b\u00A7l重型魔造人偶\u00A7r讓你訓練吧。",
+    "ToDH.plot.spacy.7.mission":"破壞\u00A7b\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.spacy.8":"真是令人意外。這恐怖的天分，若你能成為我的部下稍加培養，假以時日帝國再出一名劍聖也不是不可能。",
+    "ToDH.plot.spacy.9":"但僅僅一天的時間，我也只能將你鍛鍊到這裡了，準備上路吧，祝你好運。",
+    "ToDH.plot.spacy.9.quest":"接下來要做什麼？",
+    "ToDH.plot.spacy.9.1":"去找總教官，準備上路。(\u00A7l圖特．雷亞\u00A7r)",
+    "ToDH.plot.spacy.9.2":"回去找\u00A7l歐比拉\u00A7r嘗試其他武器。",
+    "ToDH.plot.spacy.10":"準備得差不多了，去找總教官吧。",
+    "ToDH.plot.spacy.10.mission":"去找總教官(\u00A7l圖特．雷亞\u00A7r)。",
+    "ToDH.plot.spacy.11":"再試試其他武器吧。",
+    "ToDH.plot.spacy.11.mission":"回去找\u00A7l歐比拉\u00A7r嘗試其他武器。",
+    
+    
     "ToDH.plot.tokesor.name":"托科索．瓦伏",
-    "ToDH.plot.tokesor.0":"\u00A7l輕型魔造人偶\u00A7r",
+    "ToDH.plot.tokesor.0":"\u00A7b\u00A7l輕型魔造人偶\u00A7r",
     "ToDH.plot.tokesor.1":"弓箭？貧民可拉不開......。",
     "ToDH.plot.tokesor.2":"喔，居然那麼有力氣，看來你有點故事，怎麼會選擇來到這裡呢？",
     "ToDH.plot.tokesor.3":"算了，去破壞那幾個木樁吧，光開的了弓可不能證明什麼。",
-    "ToDH.plot.tokesor.3.mission":"破壞\u00A7l訓練木樁。\u00A7r",
+    "ToDH.plot.tokesor.3.mission":"破壞\u00A7b\u00A7l訓練木樁。\u00A7r",
     "ToDH.plot.tokesor.4":"不錯的箭法，看來你有點基礎。你這樣的人怎麼會淪落至此呢，真是好奇啊。",
-    "ToDH.plot.tokesor.5":"罷了，先進行下一個訓練吧，我生成幾個\u00A7l輕型魔造人偶\u00A7r試著擊敗他們看看，這次可不是固定靶了。",
-    "ToDH.plot.tokesor.5.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.tokesor.5":"罷了，先進行下一個訓練吧，我生成幾個\u00A7b\u00A7l輕型魔造人偶\u00A7r試著擊敗他們看看，這次可不是固定靶了。",
+    "ToDH.plot.tokesor.5.mission":"破壞\u00A7b\u00A7l魔造人偶。\u00A7r",
     "ToDH.plot.tokesor.6":"精彩，沒想到你弓術如此精湛，嘖嘖，一開始真是看走眼了。",
-    "ToDH.plot.tokesor.7":"別急著高興，你現在雖然能夠應對\u00A7l輕型魔造人偶\u00A7r但若是碰上能夠打出\u00A7l強攻擊\u00A7r的敵人恐怕還是凶多吉少。",
-    "ToDH.plot.tokesor.8":"他們沉重的攻擊會使人陷入\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上就趕緊跑吧。",
+    "ToDH.plot.tokesor.7":"別急著高興，你現在雖然能夠應對\u00A7b\u00A7l輕型魔造人偶\u00A7r但若是碰上能夠打出\u00A7c\u00A7l強攻擊\u00A7r的敵人恐怕還是凶多吉少。",
+    "ToDH.plot.tokesor.8":"他們沉重的攻擊會使人陷入\u00A7c\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上就趕緊跑吧。",
     "ToDH.plot.tokesor.9":"請讓我挑戰看看。",
-    "ToDH.plot.tokesor.10":"那我召喚一些\u00A7l輕型魔造人偶\u00A7r和\u00A7l重型魔造人偶\u00A7r讓你訓練吧。",
-    "ToDH.plot.tokesor.10.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.tokesor.10":"那我召喚一些\u00A7b\u00A7l輕型魔造人偶\u00A7r和\u00A7b\u00A7l重型魔造人偶\u00A7r讓你訓練吧。",
+    "ToDH.plot.tokesor.10.mission":"破壞\u00A7b\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.tokesor.11":"哇喔，居然通過了，嘖嘖。",
+    "ToDH.plot.tokesor.12":"好啦，我也沒什麼好教給你的了，準備上路吧，祝你好運。",
+    "ToDH.plot.tokesor.12.quest":"接下來要做什麼？",
+    "ToDH.plot.tokesor.12.1":"去找總教官，準備上路。(\u00A7l圖特．雷亞\u00A7r)",
+    "ToDH.plot.tokesor.12.2":"回去找\u00A7l歐比拉\u00A7r嘗試其他武器。",
+    "ToDH.plot.tokesor.13":"準備得差不多了，去找總教官吧。",
+    "ToDH.plot.tokesor.13.mission":"去找總教官(\u00A7l圖特．雷亞\u00A7r)。",
+    "ToDH.plot.tokesor.14":"再試試其他武器吧。",
+    "ToDH.plot.tokesor.14.mission":"回去找\u00A7l歐比拉\u00A7r嘗試其他武器。",
 
     "ToDH.plot.madeya.name":"馬迪亞．傑羅斯",
     "ToDH.plot.madeya.1":"離遠點，貧民！又來個自以為擁有魔力才能的傻子，高貴的魔法可不是你們能夠接觸的。",
     "ToDH.plot.madeya.2":"真不知道父親怎麼想的怎麼會讓我來到這種地方，不就犯了點錯嗎，可惡！.......。",
     "ToDH.plot.madeya.3":"那個......。",
-    "ToDH.plot.madeya.4":"吵死了！選擇魔杖是吧？這本書拿去看，然後用魔法同時打碎那些木樁再來找我，反正你也不可能看懂，趕緊換別的武器去。",
-    "ToDH.plot.madeya.4.mission":"破壞\u00A7l訓練木樁。\u00A7r",
+    "ToDH.plot.madeya.4":"吵死了！選擇魔杖是吧？這本書拿去看，然後用魔法打碎那些木樁再來找我，反正你也不可能看懂，趕緊換別的武器去。",
+    "ToDH.plot.madeya.4.mission":"破壞\u00A7b\u00A7l訓練木樁。\u00A7r",
     "ToDH.plot.madeya.5":"什麼！你竟然......！這不可能啊，賤民怎麼可能理解這深奧的法術？我光是入門就花了整整十天，這不可能啊。莫非他不是貧民？不會吧......？",
     "ToDH.plot.madeya.6":"那個......。",
     "ToDH.plot.madeya.7":"別......。你到底是不是貧民啊？",
     "ToDH.plot.madeya.7.quest":"回應\u00A7l馬迪亞．傑羅斯\u00A7r的疑問。",
     "ToDH.plot.madeya.7.1":"是。",
     "ToDH.plot.madeya.7.2":"不是。",
-    "ToDH.plot.madeya.8":"不可能！貧民怎麼可能學會法術！我知道了！你一定也是被家主處罰來到這的，對吧。既然已經能夠基本施法了，那就試著擊敗\u00A7l輕型魔造\u00A7r \u00A7l人偶\u00A7r吧。",
-    "ToDH.plot.madeya.8.mission":"破壞\u00A7l魔造人偶。\u00A7r",
-    "ToDH.plot.madeya.9":"我就知道！貧民怎麼可能學會法術呢！你一定也是被家主處罰來到這的對吧。既然已經能夠基本施法了，那就試著擊敗\u00A7l輕型魔造人偶\u00A7r吧。",
-    "ToDH.plot.madeya.9.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.madeya.8":"不可能！貧民怎麼可能學會法術！我知道了！你一定也是被家主處罰來到這的，對吧。既然已經能夠基本施法了，那就試著擊敗\u00A7b\u00A7l輕型魔造\u00A7r \u00A7l人偶\u00A7r吧。",
+    "ToDH.plot.madeya.8.mission":"破壞\u00A7b\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.madeya.9":"我就知道！貧民怎麼可能學會法術呢！你一定也是被家主處罰來到這的對吧。既然已經能夠基本施法了，那就試著擊敗\u00A7b\u00A7l輕型魔造人偶\u00A7r吧。",
+    "ToDH.plot.madeya.9.mission":"破壞\u00A7b\u00A7l魔造人偶。\u00A7r",
     "ToDH.plot.madeya.10":"是。",
     "ToDH.plot.madeya.11":"不是。",
     "ToDH.plot.madeya.12":"呃，打的挺快的嘛，也就差了我一點點，哈...哈哈。",
-    "ToDH.plot.madeya.13":"別以為這樣你就可以沾沾自喜了，只有像我一樣可以打敗能夠打出\u00A7l強攻擊\u00A7r的敵人才算是頂尖的法師。",
-    "ToDH.plot.madeya.14":"他們沉重的攻擊會使人陷入\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上你就趕緊跑吧。",
+    "ToDH.plot.madeya.13":"別以為這樣你就可以沾沾自喜了，只有像我一樣可以打敗能夠打出\u00A7c\u00A7l強攻擊\u00A7r的敵人才算是頂尖的法師。",
+    "ToDH.plot.madeya.14":"他們沉重的攻擊會使人陷入\u00A7c\u00A7l僵直\u00A7r，讓人無法移動與攻擊，若是遇上你就趕緊跑吧。",
     "ToDH.plot.madeya.15":"請讓我挑戰看看。",
-    "ToDH.plot.madeya.16":"啊？真是自不量力，那我召喚一些\u00A7l輕型魔造人偶\u00A7r和\u00A7l重型\u00A7r \u00A7l魔造人偶\u00A7r吧，不過你是不可能超越我這個天才的。",
-    "ToDH.plot.madeya.16.mission":"破壞\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.madeya.16":"啊？真是自不量力，那我召喚一些\u00A7b\u00A7l輕型魔造人偶\u00A7r和\u00A7b\u00A7l重型\u00A7r\n \u00A7b\u00A7l魔造人偶\u00A7r吧，不過你是不可能超越我這個天才的。",
+    "ToDH.plot.madeya.16.mission":"破壞\u00A7b\u00A7l魔造人偶。\u00A7r",
+    "ToDH.plot.madeya.17":"啊？你你你...作弊了吧。",
+    "ToDH.plot.madeya.18":"啊不...，你...，嗯，很好！真是太厲害了，只差一點就打破我的紀錄了。",
+    "ToDH.plot.madeya.19":"好啦，你準備上路吧，我...我想休息一下。",
+    "ToDH.plot.madeya.20":"(這怎麼可能呢？我居然比不過他？)",
+    "ToDH.plot.madeya.20.quest":"接下來要做什麼？",
+    "ToDH.plot.madeya.20.1":"去找總教官，準備上路。(\u00A7l圖特．雷亞\u00A7r)",
+    "ToDH.plot.madeya.20.2":"回去找\u00A7l歐比拉\u00A7r嘗試其他武器。",
+    "ToDH.plot.madeya.21":"準備得差不多了，去找總教官吧。",
+    "ToDH.plot.madeya.21.mission":"去找總教官(\u00A7l圖特．雷亞\u00A7r)。",
+    "ToDH.plot.madeya.22":"再試試其他武器吧。",
+    "ToDH.plot.madeya.22.mission":"回去找\u00A7l歐比拉\u00A7r嘗試其他武器。",
+
+    "ToDH.plot.homunculus.name":"荷姆",
+    "ToDH.plot.name.unknown":"？？？",
+    "ToDH.plot.homunculus.1":"(你看了眼手中的懷錶)",
+    "ToDH.plot.homunculus.2":"爸...要是你還在就好了。",
+    "ToDH.plot.homunculus.3":"...要是時光還能倒流就好了。",
+    "ToDH.plot.homunculus.4":"...要是沒有這場災難，我還能跟你們擁有美好的時光。",
+    "ToDH.plot.homunculus.5":"我知道我本不該離開，但這是最後的希望了。",
+    "ToDH.plot.homunculus.6":"或許最後，他們能有美好的餘生。",
+    "ToDH.plot.homunculus.7":"即便這意味著，我會提早見到您...。",
+    "ToDH.plot.homunculus.8":"(你閉上雙眼，感受著掌心的滴答聲)",
+    "ToDH.plot.homunculus.8.mission":"走進\u00A7l神秘巨塔\u00A7r一探究竟。",
+    "ToDH.plot.homunculus.9":"原來這座塔這麼大的嗎...看來應該不輕鬆。",
+    "ToDH.plot.homunculus.10":"難怪帝國會給出如此高額的賞金。",
+    "ToDH.plot.homunculus.11":"也只能這樣，已經沒有退路了。",
+    "ToDH.plot.homunculus.12":"真暗啊，他們也沒有給我準備火把。",
+    "ToDH.plot.homunculus.13":"這麼黑，這下可麻煩了...。",
+    "ToDH.plot.homunculus.14":"那是什麼？",
+    "ToDH.plot.homunculus.14.mission":"檢查地上的\u00A7l漆黑粉塵。",
+    "ToDH.plot.homunculus.15":"等等，這個粉末......？",
+    "ToDH.plot.homunculus.16":"難道說...從門口一路進來的沙子全部都是？",
+    "ToDH.plot.homunculus.17":"這難道就是這裡為什麼這麼黑的原因嗎？",
+    "ToDH.plot.homunculus.18":"看來連火把都沒用了！可真是太好了！",
+    "ToDH.plot.homunculus.19":"這塔、在晃動！？",
+    "ToDH.plot.homunculus.20":"不...好像不是...？",
+    "ToDH.plot.homunculus.21":"(你突然感覺的一陣頭暈目眩，或許不該亂摸塔裡的東西...。)",
+    "ToDH.plot.homunculus.22":"我...",
+    "ToDH.plot.homunculus.23":"你醒啦？",
+    "ToDH.plot.homunculus.24":"(你注意到這裡不是剛才的地方。)",
+    "ToDH.plot.homunculus.25":"我這是...，這是哪？",
+    "ToDH.plot.homunculus.26":"這裡只是我臨時興建的庇護所。別急著亂動，你還沒恢復體力。",
+    "ToDH.plot.homunculus.27":"我...怎麼了...？",
+    "ToDH.plot.homunculus.28":"你理應不在這裡的，這是個很好的開始。",
+    "ToDH.plot.homunculus.29":"(你的手傳來炙熱的灼燒感。)",
+    "ToDH.plot.homunculus.30":"那就是龍神的力量，普通人會被迅速侵蝕腐化，不用多久就會邁入死亡。",
+    "ToDH.plot.homunculus.31":"那我...為什麼可以撐到現在？",
+    "ToDH.plot.homunculus.32":"現在整座塔都瀰漫著渾沌的魔法粉塵，即便你沒有抓上那一把。",
+    "ToDH.plot.homunculus.33":"過不久，空氣中的粉末依然能夠置你於死地。",
+    "ToDH.plot.homunculus.34":"那我現在是...？",
+    "ToDH.plot.homunculus.35":"要不是我出手，你早就死了，你很幸運，是我第一個成功救下的人。",
+    "ToDH.plot.homunculus.36":"你的意思是之前那些進來的人都......。",
+    "ToDH.plot.homunculus.37":"抱歉，失禮了，我是龍魂研究組組長，荷姆。",
+    "ToDH.plot.homunculus.38":"(你張望著四周，卻沒有看見任何人影。)",
+    "ToDH.plot.homunculus.39":"我...沒有看到你，是正常的嗎？",
+    "ToDH.plot.homunculus.40":"我因為自身原因沒辦法見到你。",
+    "ToDH.plot.homunculus.41":"但別緊張，我們的目標是一致的。",
+    "ToDH.plot.homunculus.42":"目標？",
+    "ToDH.plot.homunculus.43":"那就是，殺了這一切的原兇，那條惡龍。",
+    "ToDH.plot.homunculus.44":"你是認真的？我不過是個為了賞金臨時被徵招為調查察兵的平民，我甚至才剛學會如何戰鬥。",
+    "ToDH.plot.homunculus.45":"我...我做不到的？",
+    "ToDH.plot.homunculus.46":"不！你可以的，也必須可以！",
+    "ToDH.plot.homunculus.47":"你必須幫我！我能給你充足的協助，只要你願意幫忙。",
+    "ToDH.plot.homunculus.48":"協助？",
+    "ToDH.plot.homunculus.49":"就像救了你一樣，我能有限的利用龍魂的力量給你恢復與強化。",
+    "ToDH.plot.homunculus.50":"就算這樣......。",
+    "ToDH.plot.homunculus.51":"你也有家人吧，那條惡龍現在封鎖了整座高塔。",
+    "ToDH.plot.homunculus.52":"你甘心一輩子被困在塔中嗎？你願意永遠與家人分離嗎？",
+    "ToDH.plot.homunculus.53":"更何況現在惡龍的汙染還在擴散，沒人阻止的話。",
+    "ToDH.plot.homunculus.54":"不論是我們還是帝國都會被汙染吞噬。",
+    "ToDH.plot.homunculus.55":"我知道了......，你剛剛說的恢復與強化，是什麼意思？",
+    "ToDH.plot.homunculus.56":"我有種方法可以激發龍魂的力量，讓你免疫龍力的侵蝕。",
+    "ToDH.plot.homunculus.57":"尤其是在你危急時刻能夠將你復活於庇護所，保你不死。",
+    "ToDH.plot.homunculus.58":"這也是我剛剛能夠讓你死而復生的原理。",
+    "ToDH.plot.homunculus.59":"但你所擁有的東西，好像仍會因此消散...。",
+    "ToDH.plot.homunculus.60":"消散...？！我、我衣服呢？",
+    "ToDH.plot.homunculus.61":"你不給我一套衣服嗎？",
+    "ToDH.plot.homunculus.62":"(你的手慌忙遮住某些部位。)",
+    "ToDH.plot.homunculus.63":"我這裡可沒有這些東西！",
+    "ToDH.plot.homunculus.64":"我是說...這超出我的範疇了...不過別擔心。",
+    "ToDH.plot.homunculus.65":"龍魂也有可以讓你掌握保存的能力。",
+    "ToDH.plot.homunculus.66":"甚至在某種程度上永遠發揮你的最大潛力。",
+    "ToDH.plot.homunculus.66.mission":" 觀察突然出現的\u00A7l神秘介面\u00A7r。",
+    "ToDH.plot.homunculus.67":"也就是說，我之後不會這麼難堪了。",
+    "ToDH.plot.homunculus.68":"理論上是，也最好不要再這樣了。",
+    "ToDH.plot.homunculus.69":"那個是我苦心做出來的介面。",
+    "ToDH.plot.homunculus.70":"只要將龍魂放進去，你的體質就會發生改變。",
+    "ToDH.plot.homunculus.71":"相對來說，你能夠抵抗龍神更多的力量。",
+    "ToDH.plot.homunculus.71.mission":"使用\u00A7l神秘介面\u00A7r。",
+    "ToDH.plot.homunculus.72":"我手上大概是沒有龍魂，你有多的嗎？",
+    "ToDH.plot.homunculus.73":"沒了，為了救你，全耗光了。",
+    "ToDH.plot.homunculus.74":"但這座塔中的龍魂取之不盡、用之不竭，只要你擊敗那些怪物。",
+    "ToDH.plot.homunculus.75":"所以，你得先回到龍心之塔。",
+    "ToDH.plot.homunculus.76":"(你回到剛才倒下的地方，卻注意到了不同)",
+    "ToDH.plot.homunculus.77":"這下好了，連門口都不見了！",
+    "ToDH.plot.homunculus.78":"龍神最忌諱其他人闖進來。",
+    "ToDH.plot.homunculus.79":"因此以魔力封鎖了這座塔。",
+    "ToDH.plot.homunculus.80":"剛才的粉塵，就是這魔法的痕跡。",
+    "ToDH.plot.homunculus.80.quest":"不知怎的你的心中燃起了_____、勢必要擊敗龍神的決心。",
+    "ToDH.plot.homunculus.80.1":"逃出生天",
+    "ToDH.plot.homunculus.80.2":"拯救家人",
+    "ToDH.plot.homunculus.80.3":"得到獎賞",
+    "ToDH.plot.homunculus.80.4":"榮耀帝國",
+    "ToDH.plot.homunculus.81":"我、我可不想永遠待在這裡阿！",
+    "ToDH.plot.homunculus.82":"爸... 我一定會拯救他們的...。",
+    "ToDH.plot.homunculus.83":"嘿嘿嘿，這下我可發財啦！",
+    "ToDH.plot.homunculus.84":"為了帝國！榮耀無疆！",
+    "ToDH.plot.homunculus.85":"給我安靜！你甚至才剛九死一生！",
+    "ToDH.plot.homunculus.86":"…你至少先穿上些裝備，也好活命一些。",
+    "ToDH.plot.homunculus.87":"中間的箱子有些破爛不堪的備品。",
+    "ToDH.plot.homunculus.88":"活命？還有比剛才更可怕的手？",
+    "ToDH.plot.homunculus.89":"龍神在這座塔內屠殺了不少生靈。",
+    "ToDH.plot.homunculus.90":"並利用他們的樣子塑造的屬於祂的產物。",
+    "ToDH.plot.homunculus.91":"來確保沒有人能夠打斷祂恢復力量。",
+    "ToDH.plot.homunculus.92":"而這些產物極度危險，也是那些法師喪命的原因。",
+    "ToDH.plot.homunculus.93":"不幸的是，你需要的龍魂也在這當中。",
+    "ToDH.plot.homunculus.94":"記住，別相信裡面的任何人。",
+    "ToDH.plot.homunculus.95":"那只是眼前的幻象，真正的祂們早就已經死了。",
+    "ToDH.plot.homunculus.96":"現在，出發吧。",
 
     "ToDH.bossbar.remain_mob_amount":"剩餘怪物",
+
+    "ToDH.title.floor_complete":"通關樓層",
 
     "ToDH.mob.anger_dark_skeleton":"忿惡冥骨",
     "ToDH.mob.anger_eerie_skeleton":"忿惡詭骨",
     "ToDH.mob.grudgeful_blood_zombie":"遺恨血屍",
     "ToDH.mob.grudgeful_evil_skeleton":"纏怨邪骨",
+    "ToDH.mob.zombie":"腐屍",
+    "ToDH.mob.skeleton":"枯骨",
+
     "ToDH.item.battle.description.divider":"==================",
     "ToDH.item.battle.description.suit_effect":"套裝效果：",
     "ToDH.item.battle.description.suit_effect.none":"無",
     "ToDH.item.dragon_soul":"龍魂",
     "ToDH.item.dragon_soul.description":"龍的殘魂，蘊含強大的靈魂之力。",
+
     "ToDH.item.battle.empire_standard_armor.helmet":"帝軍戰盔",
     "ToDH.item.battle.empire_standard_armor.helmet.description.1":"帝國頒布帝軍統一戰盔。",
     "ToDH.item.battle.empire_standard_armor.helmet.description.2":"",
@@ -136,9 +286,15 @@
     "ToDH.item.battle.empire_standard_armor.boots":"帝軍長靴",
     "ToDH.item.battle.empire_standard_armor.boots.description.1":"帝國頒布帝軍統一長靴。",
     "ToDH.item.battle.empire_standard_armor.boots.description.2":"",
-    "ToDH.item.battle.empire_standard_armor.sword":"帝軍大劍",
-    "ToDH.item.battle.empire_standard_armor.sword.description.1":"帝國頒布帝軍統一大劍",
-    "ToDH.item.battle.empire_standard_armor.sword.description.2":"",
+    "ToDH.item.battle.empire_standard_weapon.sword":"帝軍大劍",
+    "ToDH.item.battle.empire_standard_weapon.sword.description.1":"帝國頒布帝軍統一大劍",
+    "ToDH.item.battle.empire_standard_weapon.sword.description.2":"",
+    "ToDH.item.battle.empire_standard_weapon.wand":"帝軍短杖",
+    "ToDH.item.battle.empire_standard_weapon.wand.description.1":"帝國頒布帝軍統一法術短杖",
+    "ToDH.item.battle.empire_standard_weapon.wand.description.2":"",
+    "ToDH.item.battle.empire_standard_weapon.bow":"帝軍短弓",
+    "ToDH.item.battle.empire_standard_weapon.bow.description.1":"帝國頒布帝軍統一短弓",
+    "ToDH.item.battle.empire_standard_weapon.bow.description.2":"",
     "ToDH.item.battle.broken_helmet_with_candle":"殘破的頭盔",
     "ToDH.item.battle.broken_helmet_with_candle.description.1":"材質差勁的破舊頭盔，雖然已經破爛不堪了，",
     "ToDH.item.battle.broken_helmet_with_candle.description.2":"但隱約能看見內部刻著帝國歷4022年生產。",
